--- a/ReunioesApp/Base.lproj/Main.storyboard
+++ b/ReunioesApp/Base.lproj/Main.storyboard
@@ -138,6 +138,9 @@
                                 <state key="normal" title="Meetings">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="didPressMeetings:" destination="XNH-Kp-XnH" eventType="touchUpInside" id="6Xm-hF-sdr"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNV-h4-hs1">
                                 <rect key="frame" x="16" y="386" width="568" height="30"/>
@@ -149,7 +152,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="MW7-wH-qoV" kind="presentation" identifier="showNewMeeting" id="2Bo-pu-QAG"/>
+                                    <action selector="didPressNewMeeting:" destination="XNH-Kp-XnH" eventType="touchUpInside" id="dVo-Zj-04L"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hou-AZ-UGt">
@@ -208,6 +211,8 @@
                         <outlet property="lblCompany" destination="Be0-oT-1lb" id="8iE-EI-Cq2"/>
                         <outlet property="lblName" destination="hou-AZ-UGt" id="UWt-EV-UrG"/>
                         <segue destination="1n6-c2-vtm" kind="unwind" identifier="unwindFromMainMenu" unwindAction="unwindFromMainMenuSegue:" id="eqK-mD-ynq"/>
+                        <segue destination="MW7-wH-qoV" kind="show" identifier="showNewMeeting" id="nNO-Rr-gYY"/>
+                        <segue destination="Q6X-vW-QBc" kind="show" identifier="showMeetings" id="n0O-Jt-SWm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XP8-Hz-dki" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -758,7 +763,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zso-nl-nZn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2256" y="1755"/>
+            <point key="canvasLocation" x="2256" y="1801"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3Wy-wF-Xmv">
@@ -776,7 +781,82 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sxy-rQ-X7O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1444" y="1755"/>
+            <point key="canvasLocation" x="1444" y="1801"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8j5-bC-6DT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Q6X-vW-QBc" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8yB-GO-Hge">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="EKI-xG-Z5o" kind="relationship" relationship="rootViewController" id="UzT-Dy-LML"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ciW-eQ-mWu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-60" y="1801"/>
+        </scene>
+        <!--Meetings-->
+        <scene sceneID="TjZ-He-gcQ">
+            <objects>
+                <viewController id="EKI-xG-Z5o" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3Za-mr-Bao"/>
+                        <viewControllerLayoutGuide type="bottom" id="fwe-cN-gNG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bMO-3l-ztV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qum-VD-RTp">
+                                <rect key="frame" x="197" y="76" width="207" height="29"/>
+                                <segments>
+                                    <segment title="Participating"/>
+                                    <segment title="Created by me"/>
+                                </segments>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MHG-pl-foT">
+                                <rect key="frame" x="0.0" y="112" width="600" height="488"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="zq6-n9-l5W" detailTextLabel="pZi-WC-koj" style="IBUITableViewCellStyleValue2" id="dDd-dh-oR8">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dDd-dh-oR8" id="veD-9O-cMh">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zq6-n9-l5W">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pZi-WC-koj">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Meetings" id="KxV-6y-fcS">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="IbI-fo-HTk"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YYC-eU-djE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="660" y="1801"/>
         </scene>
     </scenes>
     <resources>
